Rework app to use byteman to crash the Tx